Errors Fixed
Text overflowing issue is fixed.
The text and color of second phrase is updated.

--- a/app.css
+++ b/app.css
@@ -41,7 +41,7 @@ body {
   font-size: 4em;
   text-align: center;
   height: 120px;
-  width: 600px;
+  width: 80%;
   display: block;
   color: white;
   margin: 0 auto;
